# Graphics-Engine

./: .gitignore  BUGS_TRACKER.md  Build.bat  Build.py  Build.sh  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE  Library.cmake  README.md
.github/workflows/: cmake-multi-platform.yml
App/: CMakeLists.txt
App/Source/: App.cpp  App.h  EBO.cpp  EBO.h  Graphics.cpp  Graphics.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h
Core/: CMakeLists.txt
Core/Source/: App.cpp  App.h  EBO.cpp  EBO.h  Graphics.cpp  Graphics.h  GraphicsBackend.h  OpenGL.cpp  OpenGL.h  OpenGLBackend.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UserInterface.cpp  UserInterface.h  VAO.cpp  VBO.cpp  VBO.h  Vulkan.cpp  Vulkan.h  VulkanBackend.h  Window.cpp  Window.h
Core/Source/Graphics/: Graphics.h  OpenGL.cpp  OpenGL.h  Vulkan.cpp  Vulkan.h
Core/Source/Graphics/Model/: Model.cpp  Model.h
Core/Source/Graphics/Shader/: EBO.cpp  EBO.h  FBO.cpp  FBO.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Core/Source/Graphics/Texture/: Texture.cpp  Texture.h
Core/Source/UserInterface/: UserInterface.cpp  UserInterface.h
Core/Source/Utility/: Utility.cpp  Utility.h
Core/Source/Window/: Window.cpp  Window.h
Engine/: CMakeLists.txt
Engine/Source/: Engine.cpp  Engine.h  Main.cpp
Engine/Source/Graphics/: EBO.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VAO.h  VBO.h  World.cpp  World.h
Engine/Source/Graphics/Camera/: Camera.cpp  Camera.h
Engine/Source/Graphics/Grid/: Grid.cpp  Grid.h
Engine/Source/Graphics/Light/: Light.cpp  Light.h
Engine/Source/Graphics/Mesh/: Cube.cpp  Cube.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Plane.cpp  Plane.h  Pyramid.cpp  Pyramid.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Resource/Depricated/: Object.frag  Object.h.txt
Resource/Shader/: Default.vert  Grid.frag  Grid.vert  Light.frag  Light.vert  Mesh (extended vertices and indices).txt  Mesh (original vertices and indices).txt  Mesh.frag  Mesh.vert  Object.frag  Outline.frag  Outline.vert  Plane.frag  Plane.vert
Resource/Text/: Mesh (extended vertices and indices).txt  Mesh (original vertices and indices).txt
